2011-11-11  Gavin Peters  <gavinp@chromium.org>

        Protect Document during error responses
        https://bugs.webkit.org/show_bug.cgi?id=72068

        Add a Document protector to the error response code handler, just
        as exists for other ends of requests.

        Reviewed by Nate Chapin.

        Test: http/tests/misc/xslt-bad-import.html

        * loader/cache/CachedResourceRequest.cpp:
        (WebCore::CachedResourceRequest::didReceiveData):

2011-11-11  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r99979.
        http://trac.webkit.org/changeset/99979
        https://bugs.webkit.org/show_bug.cgi?id=72136

        bad commit message (Requested by gavinp on #webkit).

        * loader/cache/CachedResourceRequest.cpp:
        (WebCore::CachedResourceRequest::didReceiveData):

2011-11-11  Gavin Peters  <gavinp@chromium.org>

        Protect Document during error responses
        https://bugs.webkit.org/show_bug.cgi?id=72068

        Add a Document protector to the error response code handler, just
        as exists for other ends of requests.

        Reviewed by Nate Chapin.

        Test: http/tests/misc/xslt-bad-import.html

        * loader/cache/CachedResourceRequest.cpp:
        (WebCore::CachedResourceRequest::didReceiveData):

2011-11-10  Philippe Normand  <pnormand@igalia.com>

        [GStreamer] GstCaps and GstPad RefPtr implementation
        https://bugs.webkit.org/show_bug.cgi?id=72023

        Reviewed by Martin Robinson.

        Smart pointer implementations for GstCaps and GstPad and them
        in the media player code.

        * platform/graphics/gstreamer/GRefPtrGStreamer.cpp:
        (WTF::GstPad):
        (WTF::GstCaps):
        * platform/graphics/gstreamer/GRefPtrGStreamer.h:
        * platform/graphics/gstreamer/GStreamerGWorld.cpp:
        (WebCore::GStreamerGWorld::enterFullscreen):
        (WebCore::GStreamerGWorld::exitFullscreen):